apps/headlamp/networkpolicies/ingress-allow-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-allow-gateway
  namespace: headlamp
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: headlamp
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "4466"
              protocol: TCP
